Ensure project-list always has scrollbar
Avoids small horizontal jump as loading happens.

--- a/src/project-list.scss
+++ b/src/project-list.scss
@@ -5,7 +5,7 @@
 $project-display-side-margin: 3rem;
 
 .ProjectList {
-  overflow-y: auto;
+  overflow-y: scroll;
   flex-shrink: 1;
   flex-grow: 1;
   h1 {
